--- a/etc/sysctl.conf
+++ b/etc/sysctl.conf
@@ -32,7 +32,6 @@
 #  based on Router Advertisements for this host
 #net.ipv6.conf.all.forwarding=1
 
-
 ###################################################################
 # Additional settings - these settings can improve the network
 # security of the host and prevent against some network attacks
@@ -65,6 +64,13 @@
 # See https://www.kernel.org/doc/html/latest/admin-guide/sysrq.html
 # for what other values do
 #kernel.sysrq=438
+
+net.core.somaxconn = 10000                 # <- 追加。32768 (2^15) くらいまで大きくしても良いかも。
+net.ipv4.ip_local_port_range = 10000 60999 # port の範囲を広げる
+net.ipv4.tcp_tw_reuse = 1
+net.ipv4.tcp_fin_timeout = 10
+net.ipv4.tcp_max_tw_buckets = 2000000
+net.core.netdev_max_backlog = 8192
 
 net.ipv6.conf.all.disable_ipv6=1
 net.ipv6.conf.default.disable_ipv6=1
