tune kernel params

--- a/etc/sysctl.conf
+++ b/etc/sysctl.conf
@@ -65,12 +65,13 @@
 # for what other values do
 #kernel.sysrq=438
 
-net.core.somaxconn = 10000                 # <- 追加。32768 (2^15) くらいまで大きくしても良いかも。
-net.ipv4.ip_local_port_range = 10000 60999 # port の範囲を広げる
+net.ipv4.tcp_max_tw_buckets = 2000000
+net.ipv4.ip_local_port_range = 10000 65000
+net.core.somaxconn = 32768
+net.core.netdev_max_backlog = 8192
 net.ipv4.tcp_tw_reuse = 1
 net.ipv4.tcp_fin_timeout = 10
-net.ipv4.tcp_max_tw_buckets = 2000000
-net.core.netdev_max_backlog = 8192
+fs.file-max = 100000
 
 net.ipv6.conf.all.disable_ipv6=1
 net.ipv6.conf.default.disable_ipv6=1
