--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -1,12 +1,13 @@
 user  www-data;
 worker_processes  auto;
+worker_limit_nofile 65535;
 
 error_log  /var/log/nginx/error.log warn;
 pid        /run/nginx.pid;
 
 
 events {
-    worker_connections  1024;
+    worker_connections  8192;
 }
 
 
@@ -39,7 +40,9 @@ http {
     access_log  /var/log/nginx/access.log ltsv;
 
     sendfile        on;
-    #tcp_nopush     on;
+    tcp_nopush      on;
+    tcp_nodelay     on;
+    etag            off;
 
     keepalive_timeout  65;
 
