--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -1,6 +1,6 @@
 user  www-data;
 worker_processes  auto;
-worker_limit_nofile 65535;
+worker_rlimit_nofile 65535;
 
 error_log  /var/log/nginx/error.log warn;
 pid        /run/nginx.pid;
@@ -9,7 +9,6 @@ pid        /run/nginx.pid;
 events {
     worker_connections  8192;
 }
-
 
 http {
     include       /etc/nginx/mime.types;
