use static cache

--- a/etc/nginx/sites-enabled/isucondition.conf
+++ b/etc/nginx/sites-enabled/isucondition.conf
@@ -10,10 +10,10 @@ server {
     }
 
     # static file の配信用の root
-    # root /home/isucon/webapp/public/;
+    root /home/isucon/webapp/public/;
 
-    # location ~ .*\.(htm|html|css|js|jpg|png|gif|ico) {
-    #   expires 24h;
+    location ~ .*\.(htm|html|css|js|jpg|png|gif|ico) {
+      expires 24h;
     #   add_header Cache-Control public;
       
     #   open_file_cache max=100  # file descriptor などを cache
@@ -23,5 +23,5 @@ server {
     #   gzip_disable "msie6";
     #   gzip_static on;  # nginx configure時に --with-http_gzip_static_module 必要
     #   gzip_vary on;
-    # }
+    }
 }
